kube/apps/envoy-gateway/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy
  annotations:
    # cert-manager creates the Certificate for the https listener
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.dawidd6.duckdns.org"
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: dawidd6-duckdns-org-tls
      allowedRoutes:
        namespaces:
          from: All
